--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,22 +5,38 @@
 }
 
 body {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Roboto Mono', monospace !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(180, 75, 190);
+
 }
+
 
 img {
     max-width: 100%;
 }
 
-.row {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+input {
+    width: 150px;
 }
 
+button {
+    width: 150px;
+}
+
+
 .num_container {
-    padding-top: 10rem;
-    padding-bottom: 10rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: aliceblue;
+    padding-top: 15rem;
+    padding-bottom: 15rem;
     background-image: url(../img/retrowave.gif);
     background-size: cover;
+
+    box-shadow: -2px -2px #818181, -2px 0 #818181, 0 -2px #818181, -4px -4px rgb(42, 42, 42), -4px 0 rgb(42, 42, 42), 0 -4px rgb(42, 42, 42), 2px 2px #e0dede, 0 2px #e0dede, 2px 0 #e0dede, 2px -2px #818181, -2px 2px #e0dede, -4px 2px rgb(42, 42, 42), -4px 4px white, 4px 4px white, 4px 0 white, 0 4px white, 2px -4px rgb(42, 42, 42)
 }
